--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,20 @@
 {
-  "name": "stem-stylus-icon",
+  "name": "stem-stylus-responsive",
   "version": "0.0.0",
   "main": "./index.styl",
   "author": "Alex Tkachenko <preusx.dev@gmail.com>",
   "license": "MIT",
-  "description": "Icon mixins for stylus preprocessor",
+  "description": "Responsive functionality mixins for stylus preprocessor",
   "main": [
     "index.styl"
   ],
   "dependencies": {
-    "stem-stylus-utils": "preusx/stem-stylus-utils#0.4.12",
-    "stem-stylus-bem": "preusx/stem-stylus-bem#0.1.5"
+    "stem-stylus-extensions": "preusx/stem-stylus-extensions#0.1.0",
+    "stem-stylus-utils": "preusx/stem-stylus-utils#0.5.0"
   },
   "devDependencies": {
-    "stem-stylus-utils": "preusx/stem-stylus-utils#0.4.12",
-    "stem-stylus-bem": "preusx/stem-stylus-bem#0.1.5"
+    "stem-stylus-extensions": "preusx/stem-stylus-extensions#0.1.0",
+    "stem-stylus-utils": "preusx/stem-stylus-utils#0.5.0"
   },
   "ignore": [
     "**/.*",
