--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "stem-stylus-grid",
-  "version": "0.2.2",
+  "name": "stem-stylus-responsive",
+  "version": "0.0.0",
   "main": "./index.styl",
   "author": "Alex Tkachenko <preusx.dev@gmail.com>",
   "license": "MIT",
-  "description": "Grid mixins for stylus preprocessor",
+  "description": "Responsive functionality mixins for stylus preprocessor",
   "keywords": [
     "stylus",
     "mixin",
