Plugin has been rewritten in javascript. Up to 20 times performance improvement.

--- a/bower.json
+++ b/bower.json
@@ -9,12 +9,10 @@
     "index.styl"
   ],
   "dependencies": {
-    "stem-stylus-extensions": "preusx/stem-stylus-extensions#0.1.0",
-    "stem-stylus-utils": "preusx/stem-stylus-utils#0.5.0"
+    "stem-stylus-extensions": "preusx/stem-stylus-extensions#0.2.1"
   },
   "devDependencies": {
-    "stem-stylus-extensions": "preusx/stem-stylus-extensions#0.1.0",
-    "stem-stylus-utils": "preusx/stem-stylus-utils#0.5.0"
+    "stem-stylus-extensions": "preusx/stem-stylus-extensions#0.2.1"
   },
   "ignore": [
     "**/.*",
